--- a/swagger/index.html
+++ b/swagger/index.html
@@ -39,8 +39,8 @@
     window.onload = function() {
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
-        // url: "https://transaction-service.bridgeafrica.group/swagger/swagger.yml",
-        url: "http://localhost:8085/swagger/swagger.yml",
+        url: "https://transaction-service.bridgeafrica.group/swagger/swagger.yml",
+        // url: "http://localhost:8085/swagger/swagger.yml",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
